--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,5 @@ spring.datasource.username=postgres
 spring.datasource.password=x8IYi2tXeEhp4*&
 
 example.message=Hello World from Prod environment
+
+current.environment=prod
