--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 example.message=Hello World from Dev environment
+jwt.expiration=86400000
+
+current.environment=dev
