Agregando swagger y personalizando mensajes de error

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,4 +11,7 @@ spring.datasource.password=postgres
 example.message=Hello World from Dev environment
 jwt.expiration=86400000
 
+#springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
+
 current.environment=dev
