--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,8 @@ spring.datasource.url=jdbc:postgresql://db.sxkslaqznvdpmywkkgpp.supabase.co:5432
 spring.datasource.username=postgres
 spring.datasource.password=x8IYi2tXeEhp4*&
 
-example.message=Hello World from Prod environment
+# Springdoc-openapi
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
 
 current.environment=prod
