--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,4 @@ jwt.expiration=86400000
 springdoc.swagger-ui.operationsSorter=alpha
 
 current.environment=dev
+logging.level.org.springframework.web=DEBUG
