Migrando a Java 17. Agregnando builders en entidades. Construyendo logica del registro de usuarios

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,11 +8,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sea_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-example.message=Hello World from Dev environment
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 jwt.expiration=86400000
 
 #springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 
-current.environment=dev
 logging.level.org.springframework.web=DEBUG
+
+pe.edu.upn.pos.admin.user=admin
+pe.edu.upn.pos.admin.password=12345
