Dockerizando proyecto, BD y frontend

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,14 +2,18 @@ logging.pattern.dateformat=hh:mm
 spring.output.ansi.enabled=ALWAYS
 logging.charset.console=UTF-8
 
-server.port=8888
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://db.sxkslaqznvdpmywkkgpp.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=x8IYi2tXeEhp4*&
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USER}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Springdoc-openapi
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
+#springdoc.api-docs.enabled=false
+#springdoc.swagger-ui.enabled=false
+springdoc.swagger-ui.operationsSorter=alpha
 
-current.environment=prod
+jwt.expiration=86400000
+
+pe.edu.upn.pos.admin.user=${POS_ADMIN_USER}
+pe.edu.upn.pos.admin.password=${POS_ADMIN_PASSWORD}
