--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,5 +18,21 @@ springdoc.swagger-ui.operationsSorter=alpha
 
 logging.level.org.springframework.web=DEBUG
 
+# Credenciales para el usuario administrador
 pe.edu.upn.pos.admin.user=admin
 pe.edu.upn.pos.admin.password=12345
+pe.edu.upn.pos.frontend.url=http://localhost:3000
+pe.edu.upn.pos.frontend.path.email.confirmation=/verifyEmail?token=
+
+# Para configurar la cuenta desde donde se enviaran los correos
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=root
+spring.mail.password=admin
+
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
