--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,5 +15,19 @@ springdoc.swagger-ui.operationsSorter=alpha
 
 jwt.expiration=86400000
 
+# Credenciales para el usuario administrador
 pe.edu.upn.pos.admin.user=${POS_ADMIN_USER}
 pe.edu.upn.pos.admin.password=${POS_ADMIN_PASSWORD}
+
+# Para configurar la cuenta desde donde se enviaran los correos
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
