--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,6 +18,8 @@ jwt.expiration=86400000
 # Credenciales para el usuario administrador
 pe.edu.upn.pos.admin.user=${POS_ADMIN_USER}
 pe.edu.upn.pos.admin.password=${POS_ADMIN_PASSWORD}
+pe.edu.upn.pos.frontend.url=${POS_FRONTEND_URL}
+pe.edu.upn.pos.frontend.path.email.confirmation=${POS_FRONTEND_PATH_EMAIL_CONFIRMATION}
 
 # Para configurar la cuenta desde donde se enviaran los correos
 spring.mail.host=${SPRING_MAIL_HOST}
