--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ build/
 /src/main/resources/keypair.pem
 /src/main/resources/private-key.key
 /src/main/resources/public-key.crt
+
+### Environment variables ###
+.env
